# ceia-intro-ia

./: .gitignore  README.md  pyproject.toml
tp1/: TP1.md
tp1/hanoi_tower/: hanoi_notebook.ipynb  hanoi_states_tests.py  main.py  search.py  test_hanoi_states.py
tp1/hanoi_tower/.ipynb_checkpoints/: main-checkpoint.py  search-checkpoint.py
tp1/hanoi_tower/entrega/: main.py
tp1/hanoi_tower/latex/TP01_Latex/: IA-E1-00.aux  IA-E1-00.tex
tp1/hanoi_tower/latex/TP01_Latex/LaTex_Build/: IA-E1-00.fdb_latexmk  IA-E1-00.fls
