[tool.poetry]
name = "intro-ia"
version = "0.1.0"
description = ""
authors = ["leo centurion <centurionm.leo@gmail.com>"]
readme = "README.md"
[virtualenvs]
in-project = true
[tool.poetry.scripts]
nb = "jupyter notebook"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.0"
numpy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
